Fix activity text cutting off

--- a/frontend/src/stylesheet/components/_trip_dash.scss
+++ b/frontend/src/stylesheet/components/_trip_dash.scss
@@ -116,6 +116,7 @@
   margin-bottom: 10px;
   
   h5 {
+    height: 12pt;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
